--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
         .shape.logo {
             width: 30px;
             height: 30px;
-            opacity: 0.9;
+            opacity: 1;
+            filter: brightness(1.1) contrast(1.2);
         }
 
         @keyframes fall {
